--- a/test/res/layout/first.xml
+++ b/test/res/layout/first.xml
@@ -3,39 +3,52 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-	<Button
+
+    <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="right"
         android:text="next" />
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Please set people name" />
+
     <EditText
         android:id="@+id/name_input"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/people_name"
         android:inputType="text" />
+
     <Button
         android:id="@+id/notify_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/notify" />
-    
 
-    <TextView
-        android:id="@+id/people_name"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/people" />
+        android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/log"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" 
-        android:text="log"/>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/hello" />
+
+        <TextView
+            android:id="@+id/people_name"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/people" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="!" />
+    </LinearLayout>
 
 </LinearLayout>
